--- a/app/chips/chips.component.css
+++ b/app/chips/chips.component.css
@@ -7,6 +7,11 @@
 }
 
 :host {
+    /* Override initial display rule from parent scope */
+    --roulette-board-chips-display: flex;
+
+    --roulette-chip-display: none;
+
     --host-flex-basis: calc(50% - var(--app-container-row-gap));
     --host-flex-direction: row;
     --host-justify-content: center;
@@ -15,7 +20,6 @@
     --host-flex-order: 0;
     --host-flex-gap: clamp(1.5rem, 2vw, 2rem) clamp(1rem, 2vw, 1.75rem);
 
-    display: flex;
     flex-direction: var(--host-flex-direction);
     justify-content: var(--host-justify-content);
     align-items: var(--host-align-items);
@@ -23,4 +27,13 @@
     gap: var(--host-flex-gap);
 
     flex-basis: var(--host-flex-basis);
+}
+
+/*
+    Added initial display of none to every chip component instance to prevent initial content flickering. 
+    These styles are overridden in the local stylesheet of each chip component.
+*/
+
+roulette-chip {
+    display: var(--roulette-chip-display, none);
 }
