--- a/app/user-controls/user-controls.component.css
+++ b/app/user-controls/user-controls.component.css
@@ -7,6 +7,9 @@
 }
 
 :host {
+    /* Override initial display rule from parent scope */
+    --user-controls-display: block;
+
     --host-flex-basis: calc(50% - var(--app-container-row-gap));
     --host-flex-order: 0;
 
@@ -17,7 +20,6 @@
     --buttons-padding-inline: 0;
     --buttons-margin-block: 0;
 
-    display: block;
     flex-basis: var(--host-flex-basis);
     order: var(--host-flex-order);
 }
